--- a/index.html
+++ b/index.html
@@ -3,10 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="./javascript.js" delay></script>
+  <link rel="stylesheet" href="style.css">
   <title>Etch-a-Sketch</title>
+  
   </title>
 </head>
 <body>
   
+<div class="header"></div>
+
+<div class="container"></div>
+
+
 </body>
 </html>
