Add createGrid, changeCellColor, and resetGrid functions. Minor styling added to css file

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="./javascript.js" delay></script>
+  <script src="./javascript.js" defer></script>
   <link rel="stylesheet" href="style.css">
   <title>Etch-a-Sketch</title>
   
@@ -11,10 +11,15 @@
 </head>
 <body>
   
-<div class="header"></div>
+<div class="header">
+  <h1>ETCH-A-SKETCH</h1>
+</div>
 
-<div class="container"></div>
+<div class="container">
+  
+</div>
 
+<button class="clear-btn">CLEAR</button>
 
 </body>
 </html>
