--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@
   <h1>ETCH-A-SKETCH</h1>
 </div>
 
-<div class="container">
-  
-</div>
+<div class="container"></div>
 
-<button class="clear-btn">CLEAR</button>
+<div class="buttons">
+  <button class="grid-size-btn">SET GRID SIZE</button>
+  <button class="clear-btn">CLEAR</button>
+</div>
 
 </body>
 </html>
