Add random color button to html, add styling to random color button is css, add event listener for new random color button and generate random color in changeCellColor function based on isRandomColor conditional

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
 <div class="buttons">
   <button class="grid-size-btn">SET GRID SIZE</button>
+  <button class="random-color-btn">RANDOM COLORS: OFF</button>
   <button class="clear-btn">CLEAR</button>
 </div>
 
